--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 tensorflow==2.15.0
-pandas 
-numpy 
-scikit-learn
-tensorboard
-matplotlib
-streamlit
-scikeras
+numpy>=1.21
+pandas>=1.3
+scikit-learn>=1.0
+scikeras==0.12.0
+tensorboard>=2.15
+matplotlib>=3.4
+streamlit>=1.35
